@@ -569,6 +569,7 @@ Matt Martin <mgmartin@abacusnet.net> guile error handling code
 Robert Graham Merkel <rgmerk@mira.net> reporting, gnome, and config patches
 Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu> port to alpha-dec-osf4.0f
 G. Allen Morris III  <gam3@ann.softgams.com> for QIF core dump 
+Brent Neal <brent@baton.phys.lsu.edu> TIAA-CREF support.
 Peter Norton <spacey@inch.com> for a valiant attempt at a GTK port
 OmNiBuS <webmaster@obsidian.uia.net> web site graphics & content
 Myroslav Opyr <mopyr@IPM.Lviv.UA> for misc patches
