@@ -380,6 +380,10 @@
 
       <dd>for QIF core dump fix</dd>
 
+      <dt> <a href="mailto:brent@baton.phys.lsu.edu"> Brent Neal</a></dt>
+
+      <dd>TIAA-CREF support.</dd>
+
       <dt> <a href="mailto:spacey@inch.com"> Peter Norton</a></dt>
 
       <dd>for a valiant attempt at a GTK port</dd>
