@@ -34,15 +34,16 @@
       <li>Select a quote source from the pull-down menu. Currently
       supported quote sources include <b>Yahoo</b>, <b>Yahoo
       Europe</b>, <b>Fidelity Investments</b>, <b>T. Rowe Price</b>,
-      the <b>Vanguard Group</b> and <b>the Australian Stock
-      Exchange</b> (ASX). Note that Yahoo will provide price quotes
-      for many mutual funds <i>including</i> Fidelity, T.Rowe Price
-      and Vanguard, and that the quoted prices at Yahoo <i>should</i>
-      be identical to those that may be found at the source sites
-      (otherwise, somebody's reporting wrong information!). If you
-      choose Yahoo Europe, you should append the market code for the
-      security, such as PA for Paris, BE for Berlin, etc. Example:
-      12150.PA (a Peugot security in the Paris market).
+      the <b>Vanguard Group</b>, <b>the Australian Stock
+      Exchange</b> (ASX) and <b>TIAA-CREF</b>. Note that Yahoo will
+      provide price quotes for many mutual funds <i>including</i>
+      Fidelity, T.Rowe Price and Vanguard, and that the quoted prices
+      at Yahoo <i>should</i> be identical to those that may be found
+      at the source sites (otherwise, somebody's reporting wrong
+      information!). If you choose Yahoo Europe, you should append the
+      market code for the security, such as PA for Paris, BE for
+      Berlin, etc. Example: 12150.PA (a Peugot security in the Paris
+      market).
 
       <li>Ensure that the currency of the account matches the source
           of the stock you have selected.  This means:
@@ -191,6 +192,59 @@
       </tr>
     </table>
 
+    <table>
+      <caption>
+        Psuedo-symbols that can be used for TIAA-CREF quotes.
+      </caption>
+      <tr>
+        <th>Name</th>
+        <th>Psuedo-symbol</th>
+      </tr>
+      <tr>
+        <td>Stock</td>
+        <td>CREFstok</td>
+      </tr>
+      <tr>
+        <td>Money Market</td>
+        <td>CREFmony</td>
+      </tr>
+      <tr>
+        <td>Equity Index</td>
+        <td>CREFequi</td>
+      </tr>
+      <tr>
+        <td>Inflation-Linked Bond</td>
+        <td>CREFinfb</td>
+      </tr>
+      <tr>
+        <td>Bond Market</td>
+        <td>CREFbond</td>
+      </tr>
+      <tr>
+        <td>TIAA Real Estate</td>
+        <td>TIAAreal</td>
+      </tr>
+      <tr>
+        <td>Social Choice</td>
+        <td>CREFsoci</td>
+      </tr>
+      <tr>
+        <td>Teachers PA Stock Index</td>
+        <td>TIAAsndx</td>
+      </tr>
+      <tr>
+        <td>Global Equities</td>
+        <td>CREFglob</td>
+      </tr>
+      <tr>
+        <td>Teachers PA Select Stock</td>
+        <td>TIAAsele</td>
+      </tr>
+      <tr>
+        <td>Growth</td>
+        <td>CREFgrow</td>
+      </tr>
+    </table>
 
     <p>A sample image is shown below:<br>
     <img src="ticker-a.gif" alt="Sample Diagram"></p>
