@@ -15,7 +15,8 @@
  *                                                                  *
  * You should have received a copy of the GNU General Public License*
  * along with this program; if not, write to the Free Software      *
- * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.        *
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA        *
+ * 02111-1307, USA                                                  *
 \********************************************************************/
 
 #ifndef __DIALOG_UTILS_H__
@@ -65,6 +66,7 @@ enum
   SOURCE_TROWEPRICE,
   SOURCE_VANGUARD,
   SOURCE_ASX,
+  SOURCE_TIAA_CREF,
   NUM_SOURCES
 };
 
