@@ -73,9 +73,10 @@
                          "/usr/share/guile/1.3a/ice-9/boot-9.scm")))
       (primitive-load boot-file)))
 
-;; Automatically generated defaults...
+;; Automatically generated defaults
 (define gnc:_config-dir-default_ "@GNC_EXPANDED_CONFIGDIR@")
 (define gnc:_share-dir-default_ "@GNC_EXPANDED_SHAREDIR@")
+(define gnc:version "@VERSION@")
 
 ;; These will be converted to config vars later (see prefs.scm)
 (define gnc:*load-path* #f)
